# hwview

./: .clang-format  .cz.json  .gitignore  .prettierignore  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  const_strings.h  deviceinfo.cpp  deviceinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.json  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui  sh.tat.hwview.yml  snapcraft.yaml  udev.cpp  udev.h  vcpkg.json
.claude/agents/: regen.md  release.md
.claude/skills/ci/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  flatpak.yml  pages.yml  publish-gentoo-ebuild.yml  publish-msys2.yml  publish-winget.yml  qa.yml  release.yml  snap.yml  tests.yml
data/: name-mappings.json  vendors.json
man/: hwview.1
models/: devbytypemodel.cpp  devbytypemodel.h  node.cpp  node.h
src/: CMakeLists.txt  const_strings.h  const_strings_icons.h  const_strings_udev.h  customizedialog.cpp  customizedialog.h  devicecache.cpp  devicecache.h  deviceexport.cpp  deviceexport.h  deviceinfo.cpp  deviceinfo.h  deviceinfo_p.h  devicemonitor.cpp  devicemonitor.h  devmgmt.qrc  devmgmtui.rc  driverdetailsdialog.cpp  driverdetailsdialog.h  driverinfo.h  hwview.desktop.in  hwviewui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namemappings.cpp  namemappings.h  procutils.h  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui  sh.tat.hwview.metainfo.xml.in  systeminfo.h  viewsettings.cpp  viewsettings.h
src/backends/: CMakeLists.txt
src/backends/iokit/: CMakeLists.txt  driverinfo.cpp  iokitdeviceinfo.cpp  iokitdeviceinfo.h  iokitdeviceinfo_p.h  iokitmanager.cpp  iokitmanager.h  iokitmonitor.cpp  iokitmonitor.h  systeminfo.cpp
src/backends/setupapi/: CMakeLists.txt  devclass_guids.h  driverinfo.cpp  setupapideviceinfo.cpp  setupapideviceinfo.h  setupapideviceinfo_p.h  setupapimanager.cpp  setupapimanager.h  setupapimonitor.cpp  setupapimonitor.h  systeminfo.cpp
src/backends/udev/: CMakeLists.txt  driverinfo.cpp  systeminfo.cpp  udevdeviceinfo.cpp  udevdeviceinfo.h  udevdeviceinfo_p.h  udevenumerate.cpp  udevenumerate.h  udevmanager.cpp  udevmanager.h  udevmonitor.cpp  udevmonitor.h
src/cli/: main.cpp
src/common/: CMakeLists.txt  const_strings.h  const_strings_icons.h  const_strings_udev.h  deviceinfo.cpp  deviceinfo_p.h  importeddeviceinfo.cpp  importeddeviceinfo.h  importeddeviceinfo_p.h  namemappings.cpp  namemappings.h
src/core/: CMakeLists.txt  deviceexport.cpp  deviceexport.h
src/iokit/: CMakeLists.txt  iokitmanager.cpp  iokitmanager.h  iokitmonitor.cpp  iokitmonitor.h
src/models/: CMakeLists.txt  basetreemodel.cpp  basetreemodel.h  devbyconnmodel.cpp  devbyconnmodel.h  devbydrivermodel.cpp  devbydrivermodel.h  devbytypemodel.cpp  devbytypemodel.h  drvbydevmodel.cpp  drvbydevmodel.h  drvbytypemodel.cpp  drvbytypemodel.h  node.cpp  node.h  resbyconnmodel.cpp  resbyconnmodel.h  resbytypemodel.cpp  resbytypemodel.h
src/setupapi/: CMakeLists.txt  devclass_guids.h  setupapimanager.cpp  setupapimanager.h
src/udev/: CMakeLists.txt  udevenumerate.cpp  udevenumerate.h  udevmanager.cpp  udevmanager.h  udevmonitor.cpp  udevmonitor.h
src/viewer/: CMakeLists.txt  exporteddata.cpp  exporteddata.h  main.cpp  viewerdevbyconnmodel.cpp  viewerdevbyconnmodel.h  viewerdevbydrivermodel.cpp  viewerdevbydrivermodel.h  viewerdevbytypemodel.cpp  viewerdevbytypemodel.h  viewerdriverdetailsdialog.cpp  viewerdriverdetailsdialog.h  viewerdrvbydevmodel.cpp  viewerdrvbydevmodel.h  viewerdrvbytypemodel.cpp  viewerdrvbytypemodel.h  viewermainwindow.cpp  viewermainwindow.h  viewerpropertiesdialog.cpp  viewerpropertiesdialog.h  viewerresbyconnmodel.cpp  viewerresbyconnmodel.h  viewerresbytypemodel.cpp  viewerresbytypemodel.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  deviceinfotest.cpp  importeddeviceinfotest.cpp  namemappingstest.cpp
tests/models/: CMakeLists.txt  nodetest.cpp
tests/testdata/: name-mappings-test.json  sample-export.dmexport  vendors-test.json
udev/: udevenumerate.cpp  udevenumerate.h  udevmanager.cpp  udevmanager.h
